# src/docs/swagger.yaml
@@ -1,4 +1,22 @@
 definitions:
+  models.CreateSubscription:
+    properties:
+      end_date:
+        example: "2026-12-31"
+        type: string
+      price:
+        example: 1999
+        type: integer
+      service_name:
+        example: Netflix
+        type: string
+      start_date:
+        example: "2026-01-01"
+        type: string
+      user_id:
+        example: 60601fee-2bf1-4721-ae6f-7636e79a0cba
+        type: string
+    type: object
   models.Subscription:
     properties:
       created_at:
@@ -26,24 +44,7 @@ definitions:
 info:
   contact: {}
 paths:
-  /healthcheck:
-    get:
-      consumes:
-      - application/json
-      description: Checks if the application and database are running
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-        "503":
-          description: Service Unavailable
-          schema: {}
-      summary: Health Check
-      tags:
-      - HealthCheck
-  /subscription:
+  /api/v1/subscriptions:
     get:
       consumes:
       - application/json
@@ -74,4 +75,131 @@ paths:
       summary: Get subscriptions
       tags:
       - Subscriptions
+    post:
+      consumes:
+      - application/json
+      description: Create a new subscription
+      parameters:
+      - description: Subscription body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateSubscription'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.Subscription'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create subscription
+      tags:
+      - Subscriptions
+  /api/v1/subscriptions/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes subscription by ID
+      parameters:
+      - description: Subscription ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema: {}
+      summary: Delete subscription
+      tags:
+      - Subscriptions
+    get:
+      consumes:
+      - application/json
+      description: Returns a single subscription
+      parameters:
+      - description: Subscription ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Subscription'
+        "404":
+          description: Not Found
+          schema: {}
+      summary: Get subscription by ID
+      tags:
+      - Subscriptions
+    put:
+      consumes:
+      - application/json
+      description: Updates subscription by ID
+      parameters:
+      - description: Subscription ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Subscription body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateSubscription'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Subscription'
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Update subscription
+      tags:
+      - Subscriptions
+  /healthcheck:
+    get:
+      consumes:
+      - application/json
+      description: Checks if the application and database are running
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema: {}
+        "503":
+          description: Service Unavailable
+          schema: {}
+      summary: Health Check
+      tags:
+      - HealthCheck
 swagger: "2.0"
